// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReplyMessageChannel component existing ticket with last message as chat message 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block material-icons md-2"
          >
            forum
          </i>
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forum
            </i>
            Reply via chat
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type chat 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block material-icons md-2"
          >
            forum
          </i>
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forum
            </i>
            Reply via chat
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type email 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block material-icons md-2"
          >
            email
          </i>
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-comment 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-facebook-feed md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-facebook-feed"
            />
            Reply via Facebook comment
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-mention-comment 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-facebook-feed md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-facebook-feed"
            />
            Reply via Facebook mention comment
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-mention-post 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-facebook-feed md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-facebook-feed"
            />
            Reply via Facebook mention comment
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-messenger 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-facebook-messenger md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-facebook-messenger"
            />
            Reply via Messenger
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-post 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-facebook-feed md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-facebook-feed"
            />
            Reply via Facebook comment
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type instagram-ad-comment 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-instagram md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-instagram"
            />
            Reply via Instagram
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type instagram-ad-media 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-instagram md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-instagram"
            />
            Reply via Instagram
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type instagram-comment 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-instagram md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-instagram"
            />
            Reply via Instagram
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type instagram-media 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-instagram md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-instagram"
            />
            Reply via Instagram
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type twitter-mention-tweet 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-twitter md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-twitter"
            />
            Reply via Twitter tweet
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type twitter-quoted-tweet 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-twitter md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-twitter"
            />
            Reply via Twitter tweet
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type twitter-tweet 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-twitter md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-twitter"
            />
            Reply via Twitter tweet
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type yotpo-review 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block icon-custom icon-yotpo-review md-2"
          />
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-yotpo-review-public-comment"
            />
            Public reply on Yotpo review
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block icon-custom icon-yotpo-review-private-comment"
            />
            Private reply on Yotpo review
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket without messages 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block material-icons md-2"
          >
            email
          </i>
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              forward
            </i>
            Forward to email
          </button>
        </div>
      </div>
    </div>
    <div
      class="sourceLabel mt-1"
    >
      Internal note
    </div>
  </div>
</div>
`;

exports[`ReplyMessageChannel component new ticket 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="mt-1 mr-2"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdownToggle dropdown-toggle btn btn-"
          type="button"
        >
          <i
            class="icon d-inline-block material-icons md-2"
          >
            email
          </i>
        </button>
        <div>
          ConvertToForwardPopover
        </div>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block text-warning material-icons"
            >
              note
            </i>
            Leave internal note
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i
              class="icon d-inline-block material-icons"
            >
              email
            </i>
            Reply via email
          </button>
        </div>
      </div>
    </div>
    <div>
      MessageSourceFields
    </div>
  </div>
</div>
`;
